[tool.poetry]
name = "monobank"
version = "0.1.0"
description = "Monobank.ua API implementation"
authors = ["Vitaliy Kucheriavyi <ppr.vitaly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
